2013-08-22  aldo_000  <aldo@mudcrabstudio.com>

	* ClasseTeste.cs: adicionada uma nova classe "ClasseTeste.cs"

	* testeGitDropbox.csproj: modificada a formatação dos logs
