@@ -1,0 +1,16 @@
+using UnityEngine;
+using System.Collections;
+
+//Classe de teste
+public class Teste : MonoBehaviour {
+	
+	int teste = 0;
+	
+	void Awake() {
+	
+	}
+	
+	void Start() {
+
+	}
+}
